--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Bayu Suryo",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
